# Project-BeatSlash

./: .gitignore  404.html  LICENSE  README.md  debug_load_scene.py  file.kscn  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sc.kscn  search.html  sitemap.xml  world.kscn
.github/workflows/: deploy-docs.yml
ArtAss/: MapConcept.blend  MapConcept.blend1
BeatSlash/scripts/: player.py
EditorReference/: index.html
EngineDataReference/: index.html
EngineRuntimeReference/: index.html
KodEngine/editor/: Editor.py  ResourceManager.py
KodEngine/engine/: Kod.py  NodeComponents.py  Nodes.py  RenderingServer.py  Scenes.py  Scripts.py
NodesReference/: index.html
docs/: EditorReference.md  EngineArchitectureMap.md  EngineDataReference.md  EngineRuntimeReference.md  NodesReference.md  index.md
docs/nodes/: AnimatedSprite2D.md  AudioPlayer.md  Camera2D.md  CollisionShape2D.md  DynamicBody2D.md  KinematicBody2D.md  Node.md  Node2D.md  RectangleCollisionShape2D.md  Sprite2D.md  StaticBody2D.md  TileMap2D.md  YSort2D.md
docs/stylesheets/: extra.css
nodes/AnimatedSprite2D/: index.html
nodes/AudioPlayer/: index.html
nodes/Camera2D/: index.html
nodes/CollisionShape2D/: index.html
nodes/DynamicBody2D/: index.html
nodes/KinematicBody2D/: index.html
nodes/Node/: index.html
nodes/Node2D/: index.html
nodes/RectangleCollisionShape2D/: index.html
nodes/Sprite2D/: index.html
nodes/StaticBody2D/: index.html
nodes/TileMap2D/: index.html
nodes/YSort2D/: index.html
search/: search_index.json
src/BeatSlash/: GameTiles.tileset  main.py
(+44 files in other folders)
